# mcp-own-your-code

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  GEMINI.md  LICENSE  README.md  TODO.md  docker-compose.yml  google70qPhivynr4o-c6CZ22Sd-X2pM36Tq-ZlftGRHSwewk.html  mcp.example.json  pyproject.toml  render.yaml
.github/workflows/: ci.yml  release.yml
api/: __init__.py  main.py
docs/: CODING-PRACTICES.md  ROLLBACK-RECORD.md  USER-GUIDE.md
hooks/: post_write.py
npm/own-your-code-mcp/: README.md  package.json
src/: __init__.py  cli.py  db.py  deps.py  embeddings.py  extractor.py  post_write_hook.py  server.py
src/extractors/: __init__.py  base.py  go_extractor.py  python_extractor.py  typescript_extractor.py
templates/: PROJECT-INTENT.md
tests/: conftest.py  test_api.py  test_cli.py  test_cli_commands.py  test_db.py  test_deps.py  test_embeddings.py  test_extractors.py
ui/: index.html  package-lock.json  package.json  vite.config.js
ui/src/: App.jsx  App.module.css  api.js  index.css
ui/src/components/: CoverageBar.jsx  CoverageBar.module.css  EvolutionTimeline.jsx  EvolutionTimeline.module.css  FeatureView.jsx  FeatureView.module.css  FunctionDetail.jsx  FunctionDetail.module.css  IntentMap.jsx  IntentMap.module.css  ProjectBar.jsx  ProjectBar.module.css  ProjectInsights.jsx  ProjectInsights.module.css  SearchView.jsx  SearchView.module.css  ServerFooter.jsx  ServerFooter.module.css
