[project]
name = "own-your-code"
version = "0.1.0"
description = "Own Your Code — MCP server + UI: record why each function exists, tradeoffs, and evolution (SQLite)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
# Semantic embeddings + cosine search
semantic = [
    "sentence-transformers>=2.7.0",
    "numpy>=1.26.0",
]
# Multi-language AST indexing (TypeScript/JS + Go)
multilang = [
    "tree-sitter>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-go>=0.23.0",
]
# All optional features
full = [
    "sentence-transformers>=2.7.0",
    "numpy>=1.26.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-go>=0.23.0",
]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
own-your-code-mcp = "src.server:main"
own-your-code-hook = "src.post_write_hook:main"
# Back-compat aliases for existing MCP / shell configs
intent-ledger-mcp = "src.server:main"
claude-owns-it-mcp = "src.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
