[project]
name = "own-your-code"
version = "0.1.5"
description = "Own Your Code — MCP server + UI: record why each function exists, tradeoffs, and evolution (SQLite)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["mcp", "intent", "sqlite", "codebase", "documentation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
# Semantic embeddings + cosine search
semantic = [
    "sentence-transformers>=2.7.0",
    "numpy>=1.26.0",
]
# Multi-language AST indexing (TypeScript/JS + Go)
multilang = [
    "tree-sitter>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-go>=0.23.0",
]
# All optional features
full = [
    "sentence-transformers>=2.7.0",
    "numpy>=1.26.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-go>=0.23.0",
]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
]

[project.urls]
Repository = "https://github.com/khirodsahoo93/mcp-own-your-code"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "api"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/api",
    "/hooks",
    "/templates",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]

[project.scripts]
own-your-code = "src.cli:main"
own-your-code-mcp = "src.server:main"
own-your-code-hook = "src.post_write_hook:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
